[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/GFX/GUI/stranger_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/GFX/GUI/main_theme.tres" type="Theme" id=3]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -160.0
rect_min_size = Vector2( 200, 320 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/CenterContainer"]
margin_right = 200.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Popup/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Resume" type="Button" parent="Popup/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 1
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 1
text = "Resume"

[node name="CenterContainer2" type="CenterContainer" parent="Popup/CenterContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 200.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" type="Button" parent="Popup/CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 1
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 1
text = "Settings"

[node name="CenterContainer3" type="CenterContainer" parent="Popup/CenterContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 200.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Leave" type="Button" parent="Popup/CenterContainer/VBoxContainer/CenterContainer3"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 1
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 1
text = "Leave"

[node name="Settings" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -250.0
margin_right = 500.0
margin_bottom = 250.0
rect_min_size = Vector2( 1000, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="Label" parent="Settings"]
margin_left = 366.846
margin_top = 102.661
margin_right = 636.846
margin_bottom = 202.661
custom_fonts/font = ExtResource( 2 )
text = "Master Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterSlider" type="HSlider" parent="Settings"]
margin_left = 309.0
margin_top = 194.0
margin_right = 582.0
margin_bottom = 214.0
rect_scale = Vector2( 1.5, 1.5 )
min_value = -50.0
max_value = 30.0

[node name="Fullscreen" type="Label" parent="Settings"]
margin_left = 358.776
margin_top = 233.001
margin_right = 566.776
margin_bottom = 333.001
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen:"

[node name="FullscreenCheck" type="CheckBox" parent="Settings"]
margin_left = 590.205
margin_top = 246.601
margin_right = 606.205
margin_bottom = 286.601
rect_scale = Vector2( 2, 2 )

[node name="Save" type="Button" parent="Settings"]
margin_left = 413.994
margin_top = 346.993
margin_right = 493.994
margin_bottom = 386.993
rect_min_size = Vector2( 80, 40 )
text = "Save"

[node name="Exit" type="Button" parent="Settings"]
margin_left = 537.788
margin_top = 346.993
margin_right = 617.788
margin_bottom = 386.993
rect_min_size = Vector2( 80, 40 )
text = "Exit"
[connection signal="pressed" from="Popup/CenterContainer/VBoxContainer/CenterContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Popup/CenterContainer/VBoxContainer/CenterContainer2/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Popup/CenterContainer/VBoxContainer/CenterContainer3/Leave" to="." method="_on_Leave_pressed"]
[connection signal="pressed" from="Settings/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Settings/Exit" to="." method="_on_Exit_pressed"]
